servers/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sufra
  labels:
    app.kubernetes.io/part-of: sufra
